# metrics-lab

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  data.txt  main.cpp  mark.txt
lun/: CMakeLists.txt  Source.cc  theatre.cc  theatre.h
me/: CMakeLists.txt  foto.cc  foto.h  main.cc
mike/: CMakeLists.txt  main.cc  reg.cc  reg.h
